--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,9 +1,26 @@
 <nav class="navbar navbar-default">
-  {{#link-to 'interviewees' class='navbar-brand'}}Winterviews{{/link-to}}
-  <ul class="nav navbar-nav">
-    <li>{{#link-to 'interviewees'}}Interviewees{{/link-to}}</li>
-    <li>{{#link-to 'exercises'}}Exercises{{/link-to}}</li>
-  </ul>
-</nav>
+  <div class="container-fluid">
+    <div class="navbar-header">
+      {{#link-to 'interviewees' class='navbar-brand'}}Winterviews{{/link-to}}
+    </div>
 
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li>{{#link-to 'interviewees'}}Interviewees{{/link-to}}</li>
+        <li>{{#link-to 'exercises'}}Exercises{{/link-to}}</li>
+      </ul>
+      <form class="navbar-form navbar-right">
+        <div class="form-group">
+          {{input type="text" class="form-control" placeholder="Username" value=username}}
+        </div>
+        <div class="form-group">
+          {{input type="password" class="form-control" placeholder="Password" value=password}}
+        </div>
+        <button class="btn btn-info" {{action "login"}}
+          {{bind-attr disabled=disabled}}>Login</button>
+      </form>
+
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 {{outlet}}
